package writer

import (
	"bytes"
	"sync"
	"sync/atomic"
)

// 定义不同大小的缓冲区类别
const (
	// 超小缓冲区大小 (<= 128B)
	tinyBufferSize = 128

	// 小缓冲区大小 (<= 1KB)
	smallBufferSize = 1024

	// 中等缓冲区大小 (<= 8KB)
	mediumBufferSize = 8 * 1024

	// 大缓冲区大小 (<= 32KB)
	largeBufferSize = 32 * 1024
)

// BufferSizeStats 缓冲区大小统计
type BufferSizeStats struct {
	smallCount  atomic.Int64 // 小缓冲区计数
	mediumCount atomic.Int64 // 中等缓冲区计数
	largeCount  atomic.Int64 // 大缓冲区计数
	overSize    atomic.Int64 // 超大缓冲区计数
	totalCalls  atomic.Int64 // 总调用次数
}

// BufferPool 是一个结构体，它包含多个同步池以支持不同大小的缓冲区
type BufferPool struct {
	tinyPool   *sync.Pool      // 超小缓冲区池（<= 128B）
	smallPool  *sync.Pool      // 小缓冲区池（<= 1KB）
	mediumPool *sync.Pool      // 中等缓冲区池（<= 8KB）
	largePool  *sync.Pool      // 大缓冲区池（<= 32KB）
	stats      BufferSizeStats // 大小统计信息
}

// NewBufferPool 是一个函数，它创建并返回一个新的 BufferPool
func NewBufferPool() *BufferPool {
	return &BufferPool{
		// 创建超小缓冲区池
		tinyPool: &sync.Pool{
			New: func() interface{} {
				return bytes.NewBuffer(make([]byte, 0, tinyBufferSize))
			},
		},

		// 创建小缓冲区池
		smallPool: &sync.Pool{
			New: func() interface{} {
				return bytes.NewBuffer(make([]byte, 0, smallBufferSize))
			},
		},

		// 创建中等缓冲区池
		mediumPool: &sync.Pool{
			New: func() interface{} {
				return bytes.NewBuffer(make([]byte, 0, mediumBufferSize))
			},
		},

		// 创建大缓冲区池
		largePool: &sync.Pool{
			New: func() interface{} {
				return bytes.NewBuffer(make([]byte, 0, largeBufferSize))
			},
		},

		// 初始化统计信息
		stats: BufferSizeStats{},
	}
}

// Get 是一个方法，它从 BufferPool 获取一个合适大小的缓冲区
// 如果指定了预期大小，会尝试返回合适容量的缓冲区
func (p *BufferPool) Get() *bytes.Buffer {
	return p.GetWithHint(0)
}

// GetWithHint 根据大小提示获取适当的缓冲区
func (p *BufferPool) GetWithHint(sizeHint int) *bytes.Buffer {
	// 根据大小提示选择合适的缓冲区池
	if sizeHint <= tinyBufferSize {
		return p.tinyPool.Get().(*bytes.Buffer)
	} else if sizeHint <= smallBufferSize {
		return p.smallPool.Get().(*bytes.Buffer)
	} else if sizeHint <= mediumBufferSize {
		return p.mediumPool.Get().(*bytes.Buffer)
	} else if sizeHint <= largeBufferSize {
		return p.largePool.Get().(*bytes.Buffer)
	} else {
		// 对于超大缓冲区，直接创建新的，不放入池中
		return bytes.NewBuffer(make([]byte, 0, sizeHint))
	}
}

// Put 是一个方法，它将一个缓冲区归还到 BufferPool 中
func (p *BufferPool) Put(e *bytes.Buffer) {
	// 如果缓冲区为空，则直接返回
	if e == nil {
		return
	}

	// 重置缓冲区
	e.Reset()

	// 根据缓冲区容量决定放入哪个池
	cap := e.Cap()
	if cap <= tinyBufferSize {
		p.tinyPool.Put(e)
	} else if cap <= smallBufferSize {
		p.smallPool.Put(e)
	} else if cap <= mediumBufferSize {
		p.mediumPool.Put(e)
	} else if cap <= largeBufferSize {
		p.largePool.Put(e)
	}
	// 超大缓冲区不放回池中，让GC回收
}

// GetStats 返回缓冲池统计信息
func (p *BufferPool) GetStats() (small, medium, large, oversize, total int64) {
	small = p.stats.smallCount.Load()
	medium = p.stats.mediumCount.Load()
	large = p.stats.largeCount.Load()
	oversize = p.stats.overSize.Load()
	total = p.stats.totalCalls.Load()
	return
}
