@startuml
namespace law {
    interface Callback  {
        + OnWriteFailed(content []byte, reason error)

    }
    class Config << (S,Aquamarine) >> {
        + WithBufferSize(size int) *Config
        + WithCallback(cb Callback) *Config
        + WithQueue(q Queue) *Config

    }
    interface Queue  {
        + Push(value *bytes.Buffer)
        + Pop() *bytes.Buffer

    }
    class WriteAsyncer << (S,Aquamarine) >> {
        + Stop()
        + Write(p []byte) (int, error)

    }
    interface Writer  {
        + Write( []byte) (int, error)
        + Stop()

    }
    class emptyCallback << (S,Aquamarine) >> {
        + OnWriteFailed( []byte,  error)

    }
}

"law.Writer" <|-- "law.WriteAsyncer"
"law.Callback" <|-- "law.emptyCallback"

namespace queue {
    class MPSCQueue << (S,Aquamarine) >> {
        + Push(value *bytes.Buffer)
        + Pop() *bytes.Buffer
        + Len() int

    }
}

"law.Queue" <|-- "queue.MPSCQueue"

namespace utils {
    class BlackHoleWriter << (S,Aquamarine) >> {
        + Write(p []byte) (int, error)

    }
}


namespace writer {
    class BufferPool << (S,Aquamarine) >> {
        + Get() *bytes.Buffer
        + Put(e *bytes.Buffer)

    }
    class Status << (S,Aquamarine) >> {
        + IsRunning() bool
        + SetRunning(running bool)
        + GetExecuteAt() int64
        + SetExecuteAt(executeAt int64)

    }
}

left to right direction

writer-[hidden]right- utils

hide fields

@enduml

